--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,55 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <!-- main -->
+  <servlet>
+  	<servlet-name>mainServlet</servlet-name>
+  	<servlet-class>com.main.MainServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>mainServlet</servlet-name>
+  	<url-pattern>/shop/main/*</url-pattern>
+  </servlet-mapping>
+  
+  <!-- member -->
+  <servlet>
+  	<servlet-name>memberServlet</servlet-name>
+  	<servlet-class>com.member.MemberServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>memberServlet</servlet-name>
+  	<url-pattern>/shop/member/*</url-pattern>
+  </servlet-mapping>
+  
+  <!-- product -->
+  <servlet>
+  	<servlet-name>productServlet</servlet-name>
+  	<servlet-class>com.product.ProductServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>productServlet</servlet-name>
+  	<url-pattern>/shop/product/*</url-pattern>
+  </servlet-mapping>
+  
+  <!-- orders -->
+  <servlet>
+  	<servlet-name>ordersServlet</servlet-name>
+  	<servlet-class>com.orders.OrdersServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>ordersServlet</servlet-name>
+  	<url-pattern>/shop/orders/*</url-pattern>
+  </servlet-mapping>
+  
+  <!-- boards -->
+  <servlet>
+  	<servlet-name>boardsServlet</servlet-name>
+  	<servlet-class>com.boards.BoardsServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>boardsServlet</servlet-name>
+  	<url-pattern>/shop/boards/*</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
