--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,4 @@
-* linguist-vendored
-*.jsp linguist-vendored=false
-.html linguist-vendored=false
-*.css linguist-vendored=false
-*.js linguist-vendored=false
+*.jsp linguist-detectable=true
+.html linguist-detectable=true
+*.css linguist-detectable=true
+*.js linguist-detectable=true
